- fixed text align bug

--- a/src/styles/game.module.scss
+++ b/src/styles/game.module.scss
@@ -117,6 +117,7 @@
       button {
         margin: 1rem 2rem;
         width: 100px;
+        text-align: left;
       }
 
       p {
